Some of the ASSERTs in CachedTypes.cpp should be RELEASE_ASSERTs https://bugs.webkit.org/show_bug.cgi?id=199030

Reviewed by Mark Lam.

These assertions represent strong assumptions that the cache makes so
it's not safe to keep executing if they fail.

* runtime/CachedTypes.cpp:
(JSC::Encoder::malloc):
(JSC::Encoder::Page::alignEnd):
(JSC::Decoder::ptrForOffsetFromBase):
(JSC::Decoder::handleForEnvironment const):
(JSC::Decoder::setHandleForEnvironment):
(JSC::CachedPtr::get const):
(JSC::CachedOptional::encode):
(JSC::CachedOptional::decodeAsPtr const): Deleted.


Canonical link: https://commits.webkit.org/213000@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246610 268f45cc-cd09-0410-ab3c-d52691b4dbfc